--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "@fontsource/bad-script": "^5.0.3",
     "@fontsource/poiret-one": "^5.0.3",
     "framer-motion": "^10.12.16",
+    "get-youtube-id": "^1.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.9.0",
     "react-router-dom": "^6.12.1",
-    "react-type-animation": "^3.1.0"
+    "react-type-animation": "^3.1.0",
+    "react-youtube": "^10.1.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.37",
