--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emailjs/browser": "^3.11.0",
     "@fontsource/bad-script": "^5.0.3",
     "@fontsource/poiret-one": "^5.0.3",
     "framer-motion": "^10.12.16",
@@ -18,6 +19,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.9.0",
     "react-router-dom": "^6.12.1",
+    "react-toastify": "^9.1.3",
     "react-type-animation": "^3.1.0",
     "react-youtube": "^10.1.0"
   },
