--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.9.0",
+    "react-lazy-load": "^4.0.1",
     "react-router-dom": "^6.12.1",
     "react-toastify": "^9.1.3",
     "react-type-animation": "^3.1.0",
